# use-cache

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: basic_usage.py  fastapi_example.py
src/use_cache/: __init__.py  coders.py  decorators.py  key_builders.py  manager.py  types.py
src/use_cache/backends/: __init__.py  dynamodb.py  inmemory.py  memcached.py  redis.py
src/use_cache/integrations/: __init__.py  fastapi.py
tests/: test_basic.py
