[tool.poetry]
name = "use-cache"
version = "0.1.0"
description = "Caching library with multiple backend support"
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [{include = "use_cache", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.1.0"

[tool.poetry.group.redis.dependencies]
redis = "^5.0.0"

[tool.poetry.group.memcached.dependencies]
aiomcache = "^0.8.2"

[tool.poetry.group.dynamodb.dependencies]
aiobotocore = "^2.13.1"

[tool.poetry.group.fastapi.dependencies]
fastapi = "*"
starlette = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[project]
name = "use-cache"
version = "0.1.0"
description = "Caching library with multiple backend support"
readme = "README.md"
authors = [
    { name = "miclon", email = "jcnd@163.com" }
]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.1.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
memcached = ["aiomcache>=0.8.2"]
dynamodb = ["aiobotocore>=2.13.1"]
fastapi = ["fastapi", "starlette"]
all = ["redis>=5.0.0", "aiomcache>=0.8.2", "aiobotocore>=2.13.1", "fastapi", "starlette"]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
